# www_rust_template

./: .ignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20240318233435_users.up.sql
src/: main.rs
src/auth/: jwt.rs
src/db/: mod.rs  models.rs  pool.rs  query.rs
src/router/: routes.rs
src/utils/: error.rs
templates/: forbidden.html  index.html  login.html  not_found.html  profile.html  register.html  unauth.html  user_list.html
