[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
askama = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-tokio-native-tls",
] }
dotenv = "0.15.0"
futures = "0.3.9"
version = "3.0.0"
actix-session = "0.9.0"
argon2 = "0.5.3"
rand = "0.8"
